sm6150-common: overlay: Enable support for Bluetooth hearing aids
This device is fully capable of streaming audio to Bluetooth hearing aids
using the ASHA GATT protocol built on top of L2CAP, similar to
A2DP.

since:
- https://github.com/sweetyicecare/android_device_xiaomi_sm6150-common/blob/sapphire/configs/audio/bluetooth_qti_audio_policy_configuration.xml
- https://github.com/sweetyicecare/android_device_xiaomi_sm6150-common/blob/sapphire/configs/audio/audio_policy_configuration.xml#L426

Enable the config option for the system to handle pairs of hearing aids
properly and expose the option in Settings.

More info at https://source.android.com/devices/bluetooth/asha

--- a/overlay/AOSPASweetFrameworks/res/values/config.xml
+++ b/overlay/AOSPASweetFrameworks/res/values/config.xml
@@ -51,7 +51,10 @@
         <item>com.google.android.gms/com.google.android.gms.nearby.discovery.service.DiscoveryService</item>
     </string-array>
 
-<!-- Path to fast charging status file to detect whether an oem fast charger is active -->
+    <!-- Path to fast charging status file to detect whether an oem fast charger is active -->
     <string name="config_oemFastChargerStatusPath" translatable="false">/sys/class/power_supply/bms/fastcharge_mode</string>
+
+    <!-- Whether Hearing Aid profile is supported -->
+    <bool name="config_hearing_aid_profile_supported">true</bool>
 
 </resources>
