--- a/overlay/SweetFrameworks/res/values/config.xml
+++ b/overlay/SweetFrameworks/res/values/config.xml
@@ -40,6 +40,10 @@
     -->
     <bool name="config_fillMainBuiltInDisplayCutout">false</bool>
 
+<!-- Delay that allows some content to arrive at the display before switching
+     from DOZE to ON, in millis. -->
+    <integer name="config_wakeUpDelayDoze">32</integer>
+
     <!-- Height of the status bar -->
     <dimen name="status_bar_height_portrait">100px</dimen>
     <dimen name="status_bar_height_landscape">28.0dp</dimen>
