--- a/overlay/SweetFrameworks/res/values/config.xml
+++ b/overlay/SweetFrameworks/res/values/config.xml
@@ -40,9 +40,12 @@
     -->
     <bool name="config_fillMainBuiltInDisplayCutout">false</bool>
 
-<!-- Delay that allows some content to arrive at the display before switching
+    <!-- Delay that allows some content to arrive at the display before switching
      from DOZE to ON, in millis. -->
     <integer name="config_wakeUpDelayDoze">32</integer>
+
+    <!-- Whether usage of the proximity sensor during doze is supported -->
+    <bool name="doze_proximity_sensor_supported">false</bool>
 
     <!-- Height of the status bar -->
     <dimen name="status_bar_height_portrait">100px</dimen>
