--- a/overlay/SweetFrameworks/res/values/config.xml
+++ b/overlay/SweetFrameworks/res/values/config.xml
@@ -48,8 +48,7 @@
     <bool name="doze_proximity_sensor_supported">false</bool>
 
     <!-- Height of the status bar -->
-    <dimen name="status_bar_height_portrait">100px</dimen>
-    <dimen name="status_bar_height_landscape">28.0dp</dimen>
+    <dimen name="status_bar_height">108.0px</dimen>
 
     <!-- Radius of the software rounded corners at the top of the display in its natural
         orientation. If zero, the value of rounded_corner_radius is used. -->
